modifica dello style dei testi in generale. aggiunta del vettore save invece del tastino brutto che ci stava prima

--- a/app/src/main/res/layout/crea_esercizio.xml
+++ b/app/src/main/res/layout/crea_esercizio.xml
@@ -50,9 +50,10 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
+                android:textStyle="bold"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/drawable_botton_grigio"
-                android:hint="Nome Esercizio"
+                android:hint="Esercizio"
                 android:padding="6dp"
                 android:textAlignment="center"
                 android:textSize="24dp"
@@ -80,7 +81,7 @@
             >
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.2"
+                android:layout_weight="0.3"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="@color/black"
@@ -95,13 +96,14 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="0.5"
+                android:textStyle="italic"
                 android:background="@drawable/drawable_botton_grigio"
-                android:text="Note Esercizio"
+                android:text="Note"
                 android:textSize="15dp"></Button>
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.2"
+                android:layout_weight="0.3"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="@color/black"
@@ -304,7 +306,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.1"
             android:layout_gravity="center_vertical"
-            android:layout_height="40dp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/ic_baseline_keyboard_backspace_24"
@@ -323,6 +325,7 @@
             android:layout_gravity="center_vertical"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/drawable_scheda"
@@ -333,7 +336,7 @@
             android:onClick="ChiudTuttoNonSalva"
             android:layout_width="0dp"
             android:layout_weight="0.1"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:background="@drawable/ic_baseline_home_24"
             android:contentDescription="Cancella Tutto"
