--- a/app/src/main/res/layout/item_scheda.xml
+++ b/app/src/main/res/layout/item_scheda.xml
@@ -26,6 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Scheda"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:layout_gravity="center_vertical"
