--- a/app/src/main/res/layout/misure_dettaglio.xml
+++ b/app/src/main/res/layout/misure_dettaglio.xml
@@ -33,6 +33,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="Braccio dx"
+                        android:textStyle="bold"
                         android:layout_marginBottom="5dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
@@ -45,6 +46,7 @@
                         android:layout_height="wrap_content"
                         android:text="Braccio sx"
                         android:layout_marginBottom="5dp"
+                        android:textStyle="bold"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:gravity="center"
@@ -112,6 +114,7 @@
                         android:text="Gamba dx"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
+                        android:textStyle="bold"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/black"
                         android:textSize="18dp"></TextView>
@@ -124,6 +127,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:gravity="center"
+                        android:textStyle="bold"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/black"
                         android:textSize="18dp"
@@ -191,6 +195,7 @@
                         android:text="Petto"
                         android:layout_marginLeft="10dp"
                         android:layout_marginBottom="5dp"
+                        android:textStyle="bold"
                         android:layout_marginRight="10dp"
                         android:textColor="@color/black"
                         android:textSize="18dp"></TextView>
@@ -201,6 +206,7 @@
                         android:layout_height="wrap_content"
                         android:text="Spalle"
                         android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
                         android:layout_marginBottom="5dp"
                         android:layout_marginRight="10dp"
                         android:gravity="center"
@@ -274,6 +280,7 @@
                         android:text="Addome"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
+                        android:textStyle="bold"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/black"
                         android:textSize="18dp"></TextView>
@@ -286,6 +293,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:gravity="center"
+                        android:textStyle="bold"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/black"
                         android:textSize="18dp"
@@ -382,6 +390,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Seleziona una data"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="18dp"
                     >
