--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -28,6 +28,7 @@
                 android:layout_weight="0.5"
                 android:layout_margin="15dp"
                 android:text="REGISTRAZIONE"
+                android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="80px"></TextView>
@@ -179,6 +180,7 @@
                         android:background="@drawable/drawable_botton_grigio"
                         android:onClick="FunzioniInserisciRegistrazioni"
                         android:tag="peso"
+                        android:textStyle="italic"
                         android:text="Peso"
                         android:textSize="16dp">
 
@@ -203,6 +205,7 @@
                         android:layout_weight="1.7"
                         android:minHeight="40dp"
                         android:layout_marginLeft="10dp"
+                        android:textStyle="italic"
                         android:layout_marginRight="10dp"
                         android:background="@drawable/drawable_botton_grigio"
                         android:onClick="FunzioniInserisciRegistrazioni"
@@ -232,6 +235,7 @@
                         android:minHeight="40dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
+                        android:textStyle="italic"
                         android:background="@drawable/drawable_botton_grigio"
                         android:onClick="FunzioniInserisciRegistrazioni"
                         android:tag="kcal"
@@ -258,6 +262,7 @@
                         android:minHeight="40dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
+                        android:textStyle="italic"
                         android:background="@drawable/drawable_botton_grigio"
                         android:onClick="FunzioniInserisciRegistrazioni"
                         android:tag="note"
@@ -284,6 +289,7 @@
                             android:minHeight="40dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
+                            android:textStyle="italic"
                             android:background="@drawable/drawable_botton_grigio"
                             android:onClick="FunzioniInserisciRegistrazioni"
                             android:tag="note"
@@ -307,6 +313,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:background="@drawable/drawable_scheda"
                 android:text="Azzera"
                 android:textSize="15dp"></Button>
@@ -318,6 +325,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
+                android:textStyle="bold"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/drawable_scheda"
@@ -337,6 +345,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
+                android:textStyle="bold"
                 android:layout_weight="1"
                 android:background="@drawable/drawable_scheda"
                 android:text="Iniziamo"
