--- a/app/src/main/res/layout/crea_scheda.xml
+++ b/app/src/main/res/layout/crea_scheda.xml
@@ -42,10 +42,11 @@
                 android:layout_weight="0.5"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
+                android:textStyle="bold"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/drawable_botton_grigio"
-                android:hint="Nome Scheda"
+                android:hint="Scheda"
                 android:padding="6dp"
                 android:textAlignment="center"
                 android:textSize="24dp"
@@ -55,6 +56,7 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="0.1"
+
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 >
@@ -90,7 +92,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/drawable_botton_grigio"
-                android:text="Note Scheda"
+                android:text="Note"
+                android:textStyle="italic"
                 android:textSize="15dp"></Button>
 
             <TextView
@@ -128,7 +131,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.1"
             android:layout_gravity="center_vertical"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/ic_baseline_home_24"
             android:contentDescription="Cancella Tutto"
             >
@@ -144,6 +147,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="0.5"
+            android:textStyle="bold"
             android:layout_gravity="center_vertical"
             android:background="@drawable/drawable_scheda"
             android:text="Nuovo Giorno"
@@ -153,12 +157,13 @@
         <Button
             android:id="@+id/backScheda"
             android:layout_width="0dp"
-            android:layout_weight="0.1"
-            android:text="save"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="3dp"
-            android:background="@drawable/drawable_scheda"
-            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:background="@drawable/ic_baseline_save_24"
+            android:text=""
+            android:textStyle="bold"
 
             ></Button>
 
