--- a/app/src/main/res/layout/custom_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_dialog_layout.xml
@@ -10,6 +10,7 @@
         android:padding="16dp"
         android:layout_gravity="center"
         android:text="Sei sicuro di voler eliminare?"
+        android:textStyle="italic"
         android:textColor="@android:color/black"
         android:textSize="20dp" />
 
@@ -31,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_weight="1"
+            android:textStyle="bold"
             android:layout_margin="10dp"
             android:textSize="18dp"
             android:background="@drawable/drawable_botton_grigio"
@@ -47,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:textSize="18dp"
+            android:textStyle="bold"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/drawable_botton_grigio"
