--- a/app/src/main/res/layout/item_esercizi.xml
+++ b/app/src/main/res/layout/item_esercizi.xml
@@ -27,6 +27,7 @@
         android:text="Esercizio"
         android:textColor="@color/black"
         android:textSize="18dp"
+        android:textStyle="bold"
         android:layout_gravity="center_vertical"
         android:padding="10dp"
         android:layout_weight="0.5"
