--- a/app/src/main/res/layout/item_giorni.xml
+++ b/app/src/main/res/layout/item_giorni.xml
@@ -18,6 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Giorni"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:layout_gravity="center_vertical"
