--- a/app/src/main/res/layout/kcal_dettaglio.xml
+++ b/app/src/main/res/layout/kcal_dettaglio.xml
@@ -21,6 +21,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Calorie Attuali"
+                android:textStyle="bold"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -89,6 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Bulk"
+                    android:textStyle="bold"
                     android:textSize="18dp"
                     >
                 </RadioButton>
@@ -97,6 +99,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Normocalorica"
+                    android:textStyle="bold"
                     android:textSize="18dp"
                     >
                 </RadioButton>
@@ -105,6 +108,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Deficit"
+                    android:textStyle="bold"
                     android:textSize="18dp"
                     >
                 </RadioButton>
@@ -114,6 +118,7 @@
                     android:layout_height="wrap_content"
                     android:text="Ricomposizione corporea"
                     android:textSize="18dp"
+                    android:textStyle="bold"
                     >
                 </RadioButton>
             </RadioGroup>
@@ -133,6 +138,7 @@
                 android:text="Carbs"
                 android:textColor="@color/black"
                 android:textSize="18dp"
+                android:textStyle="bold"
                 android:padding="6dp"
                 android:background="@color/arancione"
                 android:gravity="center"
@@ -146,6 +152,7 @@
                 android:text="Protein"
                 android:textColor="@color/black"
                 android:textSize="18dp"
+                android:textStyle="bold"
                 android:padding="6dp"
                 android:background="@color/azzurrino"
                 android:gravity="center"
@@ -158,6 +165,7 @@
                 android:text="Fat"
                 android:textColor="@color/black"
                 android:textSize="18dp"
+                android:textStyle="bold"
                 android:padding="6dp"
                 android:background="@color/giallo"
                 android:gravity="center"
@@ -226,6 +234,7 @@
                     android:text="Acqua"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:textStyle="bold"
                     android:layout_marginBottom="5dp"
                     android:textColor="@color/black"
                     android:textSize="18dp"></TextView>
@@ -239,6 +248,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_marginRight="10dp"
                     android:gravity="center"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="18dp"
                     ></TextView>
@@ -331,6 +341,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Seleziona una data"
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="18dp"
                 >
