--- a/app/src/main/res/layout/note_dettaglio.xml
+++ b/app/src/main/res/layout/note_dettaglio.xml
@@ -57,6 +57,7 @@
             android:textSize="15dp"
             android:background="@drawable/drawable_scheda"
             android:text="Back"
+            android:textStyle="bold"
             android:layout_margin="10dp"
             >
         </Button>
@@ -65,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Salva"
+            android:textStyle="bold"
             android:textSize="15dp"
             android:background="@drawable/drawable_scheda"
             android:layout_margin="10dp"
