--- a/app/src/main/res/layout/schede_pag3.xml
+++ b/app/src/main/res/layout/schede_pag3.xml
@@ -69,6 +69,7 @@
                 android:layout_weight="0.5"
                 android:gravity="center"
                 android:text="Buon allenamento!"
+                android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="25dp"></TextView>
 
@@ -82,7 +83,7 @@
             <TextView
                 android:id="@+id/nomeUtente"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="5dp"
                 android:padding="5dp"
                 android:layout_marginBottom="10dp"
@@ -127,6 +128,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        android:textStyle="bold"
         android:layout_weight="0.5"
         android:background="@drawable/drawable_scheda"
         android:text="Nuova Scheda"
