--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,7 @@
         android:background="@drawable/drawable_scheda"
         android:onClick="Inizia"
         android:padding="15dp"
+        android:textStyle="bold"
         android:text="Let's go"
         android:textSize="20dp" />
 </RelativeLayout>
