Da completare... tempo al tempo

--- a/app/src/main/res/layout/item_giorni.xml
+++ b/app/src/main/res/layout/item_giorni.xml
@@ -36,7 +36,7 @@
 
     <Button
         android:id="@+id/startAllenamento"
-
+        android:onClick="AvviaGiorno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
