--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -1,46 +1,44 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp">
+    android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00"
+        android:textSize="24sp"
+        android:layout_gravity="center_horizontal"/>
 
     <LinearLayout
-        android:id="@+id/linearTesto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="50dp"
-        >
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="0.175"
-            android:gravity="left"
-            android:text=""></TextView>
-        <TextView
-            android:id="@+id/timer"
-            android:layout_width="0dp"
-            android:layout_weight="1.7"
-            android:padding="6dp"
-            android:background="@drawable/drawable_botton_grigio"
-            android:textAlignment="center"
-            android:layout_height="wrap_content"
-            >
-        </TextView>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="0.175"
-            android:gravity="left"
-            android:text=""></TextView>
-    </LinearLayout>
+        android:gravity="center">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/pauseButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pausa"/>
+
+        <Button
+            android:id="@+id/resumeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Riprendi"/>
+
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Indietro"/>
+
+        <Button
+            android:id="@+id/terminateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Termina adesso"/>
+    </LinearLayout>
+</LinearLayout>
