TUTTO CIò CHE RIGURADA FISICO è STATO FATTO. 1 GIORNO E MEZZO C AGG MIS

--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -307,7 +307,7 @@
                             android:textStyle="italic"
                             android:background="@drawable/drawable_botton_grigio"
                             android:onClick="FunzioniInserisciRegistrazioni"
-                            android:tag="note"
+                            android:tag="fisico"
                             android:text="Check Fisico"
                             android:textSize="16dp"></Button>
 
